--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,35 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base {
+  html{
+    -webkit-tap-highlight-color: transparent;
+  @apply text-base md:text-[14px] 2xl:text-[16px]
+  }
+  body {
+    @apply text-dark;
+  }
+}
+@layer components{
+  .btn-primary{
+    @apply w-full rounded-md bg-primary p-3 font-medium text-white disabled:bg-gray-200 disabled:text-gray-400 enabled:hover:bg-primary/90;
+  }
+  .label{
+    @apply p-1 font-medium;
+  }
+  .input{
+    @apply bg-gray-50 rounded-md px-3 transition-colors w-full py-2.5 border inline-block disabled:border-gray-100 mt-1 focus:border-primary focus:bg-white focus-within:border-primary focus-within:bg-white outline-none disabled:bg-gray-100;
+  }
+}
+@layer utilities {
+  .separator {
+    @apply flex items-center font-semibold text-dark/40;
+  }
+  .separator::before,
+  .separator::after {
+    content: "";
+    @apply mx-4 h-0.5 flex-1 bg-gray-200;
+  }
+}
